# leptos-vite-stylance-starter

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  index.html  justfile  package-lock.json  package.json  rustfmt.toml  vite.config.js
src/: lib.rs  main.module.css
styles/: styles.scss
{{github_folder}}.github/workflows/: build.yml
