[package]
name = "leptos-vite-stylance-starter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
stylance = { version = "0.0.6", features = ["nightly"] }
wasm-bindgen = "0.2.89"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = 'symbols'

[package.metadata.stylance]
output = "./styles/stylance/style.scss"

